--- a/configs/ipq60xx.config
+++ b/configs/ipq60xx.config
@@ -1,3 +1,18 @@
+#科学插件调整
+CONFIG_PACKAGE_luci-app-homeproxy=y
+CONFIG_PACKAGE_luci-app-openclash=y
+CONFIG_PACKAGE_luci-app-mihomo=y
+CONFIG_PACKAGE_luci-app-passwall=y
+#添加插件
+CONFIG_PACKAGE_luci-app-samba4=n
+CONFIG_PACKAGE_luci-app-diskman=y
+#CONFIG_PACKAGE_luci-app-tailscale=y
+CONFIG_PACKAGE_luci-app-luci-app-dockerman=y
+CONFIG_PACKAGE_luci-app-adguardhome=y
+#CONFIG_PACKAGE_luci-app-lucky=n
+#CONFIG_PACKAGE_luci-app-gecoosac=n
+#CONFIG_PACKAGE_luci-app-alist=n
+#以下为B大原有
 CONFIG_TARGET_qualcommax=y
 CONFIG_TARGET_qualcommax_ipq60xx=y
 CONFIG_TARGET_MULTI_PROFILE=y
