--- a/configs/ipq60xx-nowifi.config
+++ b/configs/ipq60xx-nowifi.config
@@ -15,6 +15,7 @@ CONFIG_PACKAGE_luci-app-alist=n
 CONFIG_PACKAGE_luci-app-quickstart=N
 CONFIG_PACKAGE_luci-app-unblockneteasemusic=y
 CONFIG_PACKAGE_luci-app-gecoosac=y
+CONFIG_PACKAGE_luci-app-vlmcsd=y
 
 #以下为B大原有
 CONFIG_TARGET_qualcommax=y
