--- a/configs/ipq60xx.config
+++ b/configs/ipq60xx.config
@@ -15,7 +15,7 @@ CONFIG_PACKAGE_luci-app-alist=n
 CONFIG_PACKAGE_luci-app-quickstart=y
 CONFIG_PACKAGE_luci-app-unblockneteasemusic=y
 CONFIG_PACKAGE_luci-app-gecoosac=y
-
+CONFIG_PACKAGE_luci-app-vlmcsd=y
 #以下为B大原有
 CONFIG_TARGET_qualcommax=y
 CONFIG_TARGET_qualcommax_ipq60xx=y
