--- a/.github/workflows/IPQ60XX-24.10(NOWIFI).yml
+++ b/.github/workflows/IPQ60XX-24.10(NOWIFI).yml
@@ -1,9 +1,8 @@
 name: IPQ60XX-24.10(NOWIFI)
 
-on:
   workflow_dispatch:
-  #  schedule:
-  #  - cron: 0 19 * * *
+  schedule:
+    - cron: 0 19 * * *
 
 env:
   REPO_URL: https://github.com/LiBwrt-op/openwrt-6.x.git
