--- a/.github/workflows/IPQ807X-WIFI.yml
+++ b/.github/workflows/IPQ807X-WIFI.yml
@@ -1,9 +1,9 @@
 name: IPQ807X-WIFI
 
-on:
+off:
   workflow_dispatch:
- # schedule:
- #   - cron: 0 19 * * *
+  schedule:
+    - cron: 0 19 * * *
 
 env:
   REPO_URL: https://github.com/breeze303/openwrt.git
