--- a/.github/workflows/IPQ60XX-24.10(NOWIFI).yml
+++ b/.github/workflows/IPQ60XX-24.10(NOWIFI).yml
@@ -156,10 +156,10 @@ jobs:
         tag_name: ${{env.WRT_TARGET}}_${{env.WRT_VER}}_${{env.WRT_DATE}}
         files: ./wrt/upload/*.*
         #name: R${{ env.DATE }} for ${{ env.FIRMWARE_TAG }}
-        #allowUpdates: true
-        #tag: ${{ env.FIRMWARE_TAG }}
-        #token: ${{ secrets.GITHUB_TOKEN }}
-        #artifacts: ${{ env.FIRMWARE_PATH }}/*
+        allowUpdates: true
+        tag: ${{ env.FIRMWARE_TAG }}
+        token: ${{ secrets.GITHUB_TOKEN }}
+        artifacts: ${{ env.FIRMWARE_PATH }}/*
         body: |
           **This is OpenWrt Firmware for ${{ env.FIRMWARE_TAG }}**
           ### 📒 版本24.10固件(NOWIFI)
