--- a/.github/workflows/IPQ60XX-ALL.yml
+++ b/.github/workflows/IPQ60XX-ALL.yml
@@ -1,4 +1,4 @@
-name: IPQ60XX-NOWIFI
+name: IPQ60XX-ALL
 
 on:
   workflow_dispatch:
@@ -159,8 +159,7 @@ jobs:
       if: steps.compile.outputs.status == 'success' && env.FIRMWARE_RELEASE == 'true'
       uses: ncipollo/release-action@v1
       with:
-        name: tag_name: ${{env.WRT_TARGET}}_${{env.WRT_VER}}_${{env.WRT_DATE}}
-        files: ./wrt/upload/*.*
+        name: R${{ env.DATE }} for ${{ env.FIRMWARE_TAG }}
         allowUpdates: true
         tag: ${{ env.FIRMWARE_TAG }}
         token: ${{ secrets.GITHUB_TOKEN }}
