--- a/.github/workflows/IPQ60XX-NOWIFI.yml
+++ b/.github/workflows/IPQ60XX-NOWIFI.yml
@@ -99,9 +99,6 @@ jobs:
       run: |
         [ -e files ] && mv files $OPENWRT_PATH/files
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE $OPENWRT_PATH/.config
-        chmod +x ${DIY_SCRIPT}
-        cd $OPENWRT_PATH
-        ${GITHUB_WORKSPACE}/${DIY_SCRIPT}
 
     - name: Download DL Package(下载DL软件包)
       run: |
@@ -154,8 +151,7 @@ jobs:
       if: steps.compile.outputs.status == 'success' && env.FIRMWARE_RELEASE == 'true'
       uses: ncipollo/release-action@v1
       with:
-        name: tag_name: ${{env.WRT_TARGET}}_${{env.WRT_VER}}_${{env.WRT_DATE}}
-        files: ./wrt/upload/*.*
+        name: R${{ env.DATE }} for ${{ env.FIRMWARE_TAG }}
         allowUpdates: true
         tag: ${{ env.FIRMWARE_TAG }}
         token: ${{ secrets.GITHUB_TOKEN }}
