--- a/.github/workflows/IPQ60XX-24.10(NOWIFI).yml
+++ b/.github/workflows/IPQ60XX-24.10(NOWIFI).yml
@@ -18,15 +18,6 @@ env:
   TZ: Asia/Shanghai
   GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
   WRT_TARGET: ${{inputs.WRT_TARGET}}
-  WRT_THEME: ${{inputs.WRT_THEME}}
-  WRT_NAME: ${{inputs.WRT_NAME}}
-  WRT_WIFI: ${{inputs.WRT_WIFI}}
-  WRT_IP: ${{inputs.WRT_IP}}
-  WRT_PW: ${{inputs.WRT_PW}}
-  WRT_REPO: ${{inputs.WRT_REPO}}
-  WRT_BRANCH: ${{inputs.WRT_BRANCH}}
-  WRT_PACKAGE: ${{inputs.WRT_PACKAGE}}
-  WRT_TEST: ${{inputs.WRT_TEST}}
 
 jobs:
   Build:
@@ -60,6 +51,19 @@ jobs:
         sudo -E apt-get -y autoremove --purge
         sudo -E apt-get -y clean
         sudo timedatectl set-timezone "$TZ"
+        
+    - name: Initialization Values
+    run: |
+      export WRT_DATE=$(TZ=UTC-8 date +"%y.%m.%d_%H.%M.%S")
+      export WRT_CI=$(basename $GITHUB_WORKSPACE)
+      export WRT_VER=$(echo $WRT_REPO | cut -d '/' -f 5-)-$WRT_BRANCH
+      export WRT_TYPE=$(sed -n "1{s/^#//;s/\r$//;p;q}" $GITHUB_WORKSPACE/Config/$WRT_TARGET.txt)
+
+      echo "WRT_DATE=$WRT_DATE" >> $GITHUB_ENV
+      echo "WRT_CI=$WRT_CI" >> $GITHUB_ENV
+      echo "WRT_VER=$WRT_VER" >> $GITHUB_ENV
+      echo "WRT_TYPE=$WRT_TYPE" >> $GITHUB_ENV
+
 
     - name: Combine Disks(合并磁盘)
       uses: easimon/maximize-build-space@master
