--- a/.github/workflows/IPQ60XX-24.10.yml
+++ b/.github/workflows/IPQ60XX-24.10.yml
@@ -1,3 +1,4 @@
+
 name: IPQ60XX-24.10
 
 on:
@@ -16,7 +17,7 @@ env:
   FIRMWARE_RELEASE: true
   FIRMWARE_TAG: IPQ60XX-24.10
   TZ: Asia/Shanghai
-  
+
 jobs:
   Build:
     runs-on: ubuntu-22.04
@@ -39,7 +40,17 @@ jobs:
     - name: Initialization Environment(初始化环境)
       env:
         DEBIAN_FRONTEND: noninteractive
-        
+      run: |
+        docker rmi $(docker images -q)
+        sudo rm -rf /usr/share/dotnet /etc/apt/sources.list.d /usr/local/lib/android $AGENT_TOOLSDIRECTORY
+        sudo -E apt-get -y purge azure-cli ghc* zulu* llvm* firefox google* dotnet* powershell openjdk* mongodb* moby* || true
+        sudo -E apt-get -y update
+        sudo -E apt-get -y install $(curl -fsSL is.gd/depends_ubuntu_2204)
+        sudo -E systemctl daemon-reload
+        sudo -E apt-get -y autoremove --purge
+        sudo -E apt-get -y clean
+        sudo timedatectl set-timezone "$TZ"
+
     - name: Combine Disks(合并磁盘)
       uses: easimon/maximize-build-space@master
       with:
@@ -70,15 +81,6 @@ jobs:
         echo "DEVICE_TARGET=$DEVICE_TARGET" >> $GITHUB_ENV
         DEVICE_SUBTARGET=$(cat .config | grep CONFIG_TARGET_SUBTARGET | awk -F '"' '{print $2}')
         echo "DEVICE_SUBTARGET=$DEVICE_SUBTARGET" >> $GITHUB_ENV
-        export WRT_DATE=$(TZ=UTC-8 date +"%y.%m.%d_%H.%M.%S")
-        export WRT_CI=$(basename $GITHUB_WORKSPACE)
-        export WRT_VER=$(echo $WRT_REPO | cut -d '/' -f 5-)-$WRT_BRANCH
-        export WRT_TYPE=$(sed -n "1{s/^#//;s/\r$//;p;q}" $GITHUB_WORKSPACE/Config/$WRT_TARGET.txt)
-
-        echo "WRT_DATE=$WRT_DATE" >> $GITHUB_ENV
-        echo "WRT_CI=$WRT_CI" >> $GITHUB_ENV
-        echo "WRT_VER=$WRT_VER" >> $GITHUB_ENV
-        echo "WRT_TYPE=$WRT_TYPE" >> $GITHUB_ENV
 
     - name: Cache Toolchain(缓存工具链)
       if: env.CACHE_TOOLCHAIN == 'true'
@@ -98,6 +100,9 @@ jobs:
       run: |
         [ -e files ] && mv files $OPENWRT_PATH/files
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE $OPENWRT_PATH/.config
+        chmod +x ${DIY_SCRIPT}
+        cd $OPENWRT_PATH
+        ${GITHUB_WORKSPACE}/${DIY_SCRIPT}
 
     - name: Download DL Package(下载DL软件包)
       run: |
