--- a/configs/ipq60xx-6.12-nowifi.config
+++ b/configs/ipq60xx-6.12-nowifi.config
@@ -260,3 +260,19 @@ CONFIG_SING_BOX_BUILD_REALITY_SERVER=y
 CONFIG_SING_BOX_BUILD_UTLS=y
 CONFIG_SING_BOX_BUILD_WIREGUARD=y
 # CONFIG_TARGET_ROOTFS_INITRAMFS is not set
+
+#科学插件调整
+CONFIG_PACKAGE_luci-app-openclash=n
+CONFIG_PACKAGE_luci-app-mihomo=y
+CONFIG_PACKAGE_luci-app-passwall=n
+#添加插件
+CONFIG_PACKAGE_luci-app-samba4=n
+CONFIG_PACKAGE_luci-app-diskman=n
+CONFIG_PACKAGE_luci-app-tailscale=y
+CONFIG_PACKAGE_luci-app-luci-app-dockerman=n
+CONFIG_PACKAGE_luci-app-adguardhome=y
+CONFIG_PACKAGE_luci-app-lucky=y
+CONFIG_PACKAGE_luci-app-gecoosac=n
+CONFIG_PACKAGE_luci-app-alist=n
+CONFIG_PACKAGE_luci-app-unblockneteasemusic=y
+CONFIG_PACKAGE_luci-app-vlmcsd=y
