--- a/configs/ipq60xx-nowifi.config
+++ b/configs/ipq60xx-nowifi.config
@@ -229,6 +229,7 @@ CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-adguardhome=n
 CONFIG_PACKAGE_luci-app-adguardhome_INCLUDE_binary=n
 CONFIG_PACKAGE_luci-app-lucky=y
+CONFIG_PACKAGE_luci-app-quickstart=y
 
 #组件调整
 CONFIG_PACKAGE_autocore=y
