--- a/configs/ipq60xx-6.12-wifi.config
+++ b/configs/ipq60xx-6.12-wifi.config
@@ -10,6 +10,7 @@ CONFIG_PACKAGE_luci-app-adguardhome=n
 CONFIG_PACKAGE_luci-app-adguardhome_INCLUDE_binary=n
 CONFIG_PACKAGE_luci-app-lucky=y
 CONFIG_PACKAGE_luci-app-quickstart=y
+CONFIG_PACKAGE_luci-app-netspeedtest=y
 
 #组件调整
 CONFIG_PACKAGE_autocore=y
