--- a/configs/ipq60xx-6.12-nowifi.config
+++ b/configs/ipq60xx-6.12-nowifi.config
@@ -26,13 +26,13 @@ CONFIG_PACKAGE_cgdisk=y
 CONFIG_PACKAGE_fdisk=y
 CONFIG_PACKAGE_gdisk=y
 CONFIG_PACKAGE_htop=y
-CONFIG_PACKAGE_iperf3=y
+CONFIG_PACKAGE_iperf3=m
 CONFIG_PACKAGE_lsblk=y
 CONFIG_PACKAGE_sfdisk=y
 CONFIG_PACKAGE_sgdisk=y
-CONFIG_PACKAGE_luci-lib-ipkg=y
-CONFIG_PACKAGE_luci-proto-bonding=m
-CONFIG_PACKAGE_luci-proto-relay=m
+CONFIG_PACKAGE_luci-lib-ipkg=n
+CONFIG_PACKAGE_luci-proto-bonding=n
+CONFIG_PACKAGE_luci-proto-relay=n
 
 #B大原有
 CONFIG_TARGET_qualcommax=y
