--- a/.github/workflows/IPQ60XX-6.12-NOWIFI.yml
+++ b/.github/workflows/IPQ60XX-6.12-NOWIFI.yml
@@ -1,3 +1,4 @@
+
 name: IPQ60XX-6.12-NOWIFI
 
 on:
@@ -154,15 +155,8 @@ jobs:
         tag_name: ${{ env.WRT_TARGET }}_${{ env.WRT_VER }}_${{ env.WRT_DATE }}
         files: ./wrt/upload/*.*
         body: |
-          **This is OpenWrt Firmware for ${{ env.FIRMWARE_TAG }}**
+          **This is OpenWrt Firmware for ${{ env.WRT_TARGET }}-${{ env.WRT_VER }}-${{ env.WRT_DATE }}**
           ### 📒 固件信息(无WIFI)
           - 无WIFI带有线NSS的6.12内核固件
-          - 💻 这是 ${{ env.FIRMWARE_TAG }} 平台使用的 OpenWrt 固件
-          - ⚽ 固件源码: ${{ env.REPO_URL }}
-          - 💝 源码分支: ${{ env.REPO_BRANCH }}
-          - 🌐 默认地址: 192.168.1.1
-          - 🔑 默认密码: password
-          ### 🧊 固件版本
-          - 固件内核版本：${{ env.VERSION_KERNEL }}
-          - 固件编译前最后一次➦[主源码](${{ env.REPO_URL }})更新记录
-          - ${{ env.VERSION_INFO
+          - 💻 这是 ${{ env.WRT_TARGET }}-${{ env.WRT_VER }}-${{ env.WRT_DATE }} 平台使用的 OpenWrt 固件
+          - ⚽ 固件源码: ${{ env.REPO
