--- a/.github/workflows/IPQ60XX-6.12-NOWIFI.yml
+++ b/.github/workflows/IPQ60XX-6.12-NOWIFI.yml
@@ -159,4 +159,11 @@ jobs:
           ### 📒 固件信息(无WIFI)
           - 无WIFI带有线NSS的6.12内核固件
           - 💻 这是 ${{ env.WRT_TARGET }}-${{ env.WRT_VER }}-${{ env.WRT_DATE }} 平台使用的 OpenWrt 固件
-          - ⚽ 固件源码: ${{ env.REPO
+          - ⚽ 固件源码: ${{ env.REPO_URL }}
+          - 💝 源码分支: ${{ env.REPO_BRANCH }}
+          - 🌐 默认地址: 192.168.1.1
+          - 🔑 默认密码: password
+          ### 🧊 固件版本
+          - 固件内核版本：${{ env.VERSION_KERNEL }}
+          - 固件编译前最后一次➦[主源码](${{ env.REPO_URL }})更新记录
+          - ${{ env.VERSION_INFO }}
