--- a/configs/ipq60xx-6.12-nowifi.config
+++ b/configs/ipq60xx-6.12-nowifi.config
@@ -14,7 +14,8 @@ CONFIG_PACKAGE_luci-app-tailscale=y
 CONFIG_PACKAGE_luci-app-gecoosac=y
 CONFIG_PACKAGE_luci-app-quickstart=y
 CONFIG_PACKAGE_luci-app-netspeedtest=y
-
+#CONFIG_PACKAGE_luci-proto-bonding=y
+#CONFIG_PACKAGE_luci-proto-relay=y
 
 #组件调整
 CONFIG_PACKAGE_autocore=y
@@ -111,7 +112,6 @@ CONFIG_PACKAGE_ip6tables-nft=y
 # CONFIG_PACKAGE_ipq-wifi-redmi_ax5-jdcloud is not set
 # CONFIG_PACKAGE_ipq-wifi-xiaomi_ax1800 is not set
 # CONFIG_PACKAGE_ipq-wifi-zn_m2 is not set
-CONFIG_PACKAGE_iptables-mod-extra=y
 CONFIG_PACKAGE_iptables-nft=y
 # CONFIG_PACKAGE_iw is not set
 # CONFIG_PACKAGE_kmod-ath is not set
@@ -354,3 +354,11 @@ CONFIG_MBEDTLS_THREADING_PTHREAD=y
 # CONFIG_MBEDTLS_VERSION_C is not set
 # CONFIG_MBEDTLS_VERSION_FEATURES is not set
 CONFIG_PACKAGE_libmbedtls=m
+#  docker dependencies
+CONFIG_PACKAGE_iptables-mod-extra=y
+CONFIG_PACKAGE_ip6tables-nft=y
+CONFIG_PACKAGE_ip6tables-mod-fullconenat=y
+CONFIG_PACKAGE_iptables-mod-fullconenat=y
+CONFIG_PACKAGE_libip4tc=y
+CONFIG_PACKAGE_libip6tc=y
+
