--- a/configs/ipq60xx-nowifi.config
+++ b/configs/ipq60xx-nowifi.config
@@ -244,7 +244,7 @@ CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_lsblk=y
 CONFIG_PACKAGE_sfdisk=y
 CONFIG_PACKAGE_sgdisk=y
-CONFIG_PACKAGE_luci-lib-ipkg=y
+#CONFIG_PACKAGE_luci-lib-ipkg=y
 CONFIG_PACKAGE_luci-proto-bonding=y
 CONFIG_PACKAGE_luci-proto-relay=y
 
