--- a/.github/workflows/ipq60xx-6.12-M2_Nowifi.yml
+++ b/.github/workflows/ipq60xx-6.12-M2_Nowifi.yml
@@ -3,7 +3,7 @@ name: ipq60xx-6.12-M2_Nowifi
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 18 * * *"  # UTC时间18:00（北京时间凌晨2点）
+    #- cron: "0 18 * * *"  # UTC时间18:00（北京时间凌晨2点）
 
 env:
   TERM: dumb  # 关键修复
